examples/test/testpolicy6673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6673
  namespace: namespace137
spec:
  podSelector:
    matchLabels:
      key21: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value38
          key46: value9
      podSelector:
        matchLabels:
          key8: value11
          key14: value29
          key38: value25
